fix mobile gutter and icon spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,15 @@
+:root {
+  --icon-size: 48px;
+}
+
+html {
+  height: 100%;
+}
+
+.container {
+  padding: 2rem 2rem 1rem;
+}
+
 h1 {
   color: var(--pico-color-pink-400);
   font-size: 4rem;
@@ -12,18 +24,27 @@ blockquote p {
   color: var(--pico-color-purple-200);
 }
 
+.instruments {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 3rem 0 1rem;
+}
+
 .icon-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 1rem;
 }
 .icon-title {
   color: #ffffff;
 }
 .icon-img {
-  width: 48px;
-  height: 48px;
+  width: var(--icon-size);
+  height: var(--icon-size);
   margin: 0.5rem;
 }
 
@@ -70,4 +91,7 @@ blockquote p {
   .icon-img {
     filter: invert(1);
   }
+}
+
+@media only screen and (max-width: 768px) {
 }
